# libdispatch

./: Makefile.am  README.md  configure.ac
config/: config.h
dispatch/: dispatch.h
m4/: blocks.m4
private/: private.h
src/: apply.c  init.c  internal.h  io.c  io_internal.h  queue.c  semaphore.c  shims.h  source.c
src/shims/: pthread_main_np.h  strlcpy.h
