#
#
#

ACLOCAL_AMFLAGS = -I m4

if COMPILE_TESTING
	TESTING = testing
endif

SUBDIRS=					\
	dispatch				\
	man						\
	private					\
	src $(TESTING)

EXTRA_DIST=					\
	LICENSE					\
	PATCHES					\
	autogen.sh				\
	config/config.h			\
	libdispatch.xcodeproj	\
	resolver				\
	tools					\
	xcodeconfig				\
	xcodescripts
